--- a/index.html
+++ b/index.html
@@ -11,15 +11,12 @@
   
   
   <title>Paulo Fernandes - Desenvolvedor Web em São Carlos - SP Desde 2007</title>
-  <link rel="stylesheet" href="assets/web/assets/mobirise-icons-bold/mobirise-icons-bold.css">
-  <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
-  <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
+  <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link href="assets/fonts/style.css" rel="stylesheet">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
@@ -72,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build your own site for free</a></section><section class="header3 cid-s0hNEG1d92 mbr-parallax-background" id="header3-2">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="header3 cid-s0hNEG1d92 mbr-parallax-background" id="header3-2">
 
     
 
@@ -228,7 +225,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="2C2ABrfdu/OnB9dklX3zZOJ6V9bGlrkoM7/NVWwxyOhmcGUSYIka3IoxDIxmEVu8p9jzaNX81Ur45tBbioITT3iqd89blSXs+6NaHXYUWKuVTjXxB3604sV12L2B8R9e">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="5hMkyd8X4eY6nylOVKnLddzgKkXWA7jrJS++AUXMb0z+JqsSxMNhQetaGvqoxOXv+L4YlTkSDhFbQqbGcb5xTt+AVoFqydxGRsDKIHW/aZKj/iTf9yikIkJqMB6k8bQj">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Opa! Já recebemos seu e-mail aguarde informações de nossas promoções!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -346,7 +343,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ah2glU0IH7kdsATuyglrOL3/h1M6TxyButuQm8VRQKh2v89ItRzPbImNWncwhmd/UMhU0gPTKfftamCz18FQ1ulqtJKb+s5weCirVxGOYLFAr/BgpiD93mvKg7+3Cd+X">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="He2aY3I+yxcgJW1BMa4DXT8gec02VEFo3sX9BzdqeHeV6xH3uZf27DQbiTP/OL4m5bxr942LtSB9DMs0gDFB3eQHiWlZpRuOhj/CdrbsnmgSUt2lQp9ZFZkBSrct4FiR">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Opa! Já recebemos sua mensagem, e em muito breve responderemos.</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -354,7 +351,7 @@
                     </div>
                     <div class="dragArea row">
                         <div class="col-md-4  form-group" data-for="name">
-                            <label for="name-form1-8" class="form-control-label mbr-fonts-style display-7">✎ Seu nome</label>
+                            <label for="name-form1-8" class="form-control-label mbr-fonts-style display-7">✎ Nome</label>
                             <input type="text" name="name" data-form-field="Name" required="required" class="form-control display-7" id="name-form1-8">
                         </div>
                         <div class="col-md-4  form-group" data-for="email">
@@ -366,7 +363,7 @@
                             <input type="tel" name="phone" data-form-field="Phone" class="form-control display-7" id="phone-form1-8">
                         </div>
                         <div data-for="message" class="col-md-12 form-group">
-                            <label for="message-form1-8" class="form-control-label mbr-fonts-style display-7">⎙ Sua mensagem</label>
+                            <label for="message-form1-8" class="form-control-label mbr-fonts-style display-7">⎙ Mensagem</label>
                             <textarea name="message" data-form-field="Message" class="form-control display-7" id="message-form1-8"></textarea>
                         </div>
                         <div class="col-md-12 input-group-btn align-center"><button type="submit" class="btn btn-form btn-warning display-4" href="page1.html#features9-e">Enviar agora</button></div>
@@ -450,16 +447,16 @@
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+  <script src="assets/tether/tether.min.js"></script>
+  <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/dropdown/js/nav-dropdown.js"></script>
   <script src="assets/dropdown/js/navbar-dropdown.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
-  <script src="assets/tether/tether.min.js"></script>
+  <script src="assets/bootstrapcarouselswipe/bootstrap-carousel-swipe.js"></script>
   <script src="assets/mbr-clients-slider/mbr-clients-slider.js"></script>
   <script src="assets/ytplayer/jquery.mb.ytplayer.min.js"></script>
   <script src="assets/vimeoplayer/jquery.mb.vimeo_player.js"></script>
-  <script src="assets/bootstrapcarouselswipe/bootstrap-carousel-swipe.js"></script>
-  <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/theme/js/script.js"></script>
   <script src="assets/formoid/formoid.min.js"></script>
   
