--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     
 
-    <nav class="navbar navbar-expand beta-menu navbar-dropdown align-items-center navbar-fixed-top navbar-toggleable-sm bg-color transparent">
+    <nav class="navbar navbar-expand beta-menu navbar-dropdown align-items-center navbar-fixed-top navbar-toggleable-sm">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <div class="hamburger">
                 <span></span>
@@ -72,7 +72,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="header3 cid-s0hNEG1d92 mbr-parallax-background" id="header3-2">
+<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="header3 cid-s0hNEG1d92 mbr-parallax-background" id="header3-2">
 
     
 
@@ -227,7 +227,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="dhYqhQ9HLDqABUqmrVlMamsB7UHzhBMtgvMJKdyYVEjHBzvOT6aR6lMOngdzOXK53oMenRdpsZhTIE+Cq9y8OGRnlPPITrYRL13+txvjF2tXTL+YuDHYLzCFZma5IN5L">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="qtcooI25Lc637k5dIoDzWzls8nNlSK7okXfnrZxvIThlHlbE5BshbUUxlwcq5Z/gvGkVIdIag3DIG+e+3XnYeBhNaheySxKeIplZy1larVobUt+CQv5z4WoJO3W0pZs5">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Opa! Já recebemos seu e-mail aguarde informações de nossas promoções!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -262,8 +262,8 @@
                     <h4 class="card-title py-3 mbr-fonts-style display-7">
                         Web Sites &amp; Sistemas</h4>
                     <p class="mbr-text mbr-fonts-style display-7">
-                        Sites e sistema de administração e gerenciamento, com páginas <strong>adaptáveis a qualquer dispositivo</strong>, com aplicações específicas para cada modelo de negócio ou necessidade. Sites otimizados, SEO. 
-                    <br><br></p>
+                        Sites e sistema de administração e gerenciamento, com páginas <strong>adaptáveis a qualquer dispositivo</strong>, com aplicações específicas para cada modelo de negócio ou necessidade. Sites otimizados, SEO. <br>
+                    <a href="sitesesistemas.html#header3-q">✚ saíba mais</a><br><br></p>
                 </div>
             </div>
 
@@ -345,7 +345,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ViB0GcIF2jmupftwc76XrfDmxWR4Ja5ROHWxWzrsltz4nVx2Xy00S0zi0alrRMGGhboA8OFAJeNa1pIPm44BqJGBypGh7h9Dtk/r9m8aeE4UqGZ4J96XjAuLEQT++bHt">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="lomLnmm4yitm8EI81pW7ZqbDM88BSf4joZAIaGgk6db8WraNv7SX+Sbxh7wb4hnlYUHF0QT256fw5V2lV27hjAbiUzVWuXjAGHQxGeNUnA137zTsWFXgORkGqby82ybu">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Opa! Já recebemos sua mensagem, e em muito breve responderemos.</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
