--- a/index.html
+++ b/index.html
@@ -49,11 +49,10 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="index.html#footer5-9">
-                         <img src="assets/images/favicon.desenvolvedorweb-150x120.png" alt="Like`Web - Desenvolvendo desde 2007" title="Like`Web - Desenvolvendo desde 2007" style="height: 3.8rem;">
+                         <img src="assets/images/logo.paulo-450x105.png" alt="Like`Web - Desenvolvendo desde 2007" title="Like`Web - Desenvolvendo desde 2007" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-success display-5" href="#top">
-                        PAULO R.FERNANDES</a></span>
+                
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -76,7 +75,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">site creation software</a></section><section class="header3 cid-s0hNEG1d92 mbr-parallax-background" id="header3-2">
+<section class="engine"><a href="https://mobirise.info/i">website creation software</a></section><section class="header3 cid-s0hNEG1d92 mbr-parallax-background" id="header3-2">
 
     
 
@@ -231,7 +230,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="jkProOTMldAJS0tU7LjA+DMKAAqV6MHq4p6A1iwyiUbVdWbCMUjziMnXOdg29j7vtMAX4COkju7QyQBBnu7h7bxKgKcoTKZfd665CfF8PfI2m4HMCffK6uFVr1KWS9So">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="EfxyWkvymUgnor8/GxMI/pjaOURbePHfJdyohGp9jCiPJei5WvFfF8KP9GAVXCpq/cqhfdIJ4NMwk/mQBxFS+WhEhX/Cyuy0V7MyYr5gaHc2fp3cH/AKHjydxQwNnVF3">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Opa! Já recebemos seu e-mail aguarde informações de nossas promoções!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -349,7 +348,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="2tKooDLdQJDw3gE2MmoytmHGy9+0k6RlHfU+WH211H4cBEAXaj739IQTpR6lgsJnaGjrP03KqYdA1d4eA0HDVVufmcxdCSPSIJAJErkvlFxReFR6bQXwsmHHAs2mself">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="YpeHNT6EJjHAosYzgMuK0MoviO2c0cBfe1oHuTft5S6qRw6mdZvwJHNCpmkhBnSc+ti5qicR9tfifTi6/jXfqSzz3r2BHZjDVDed7n523ZslemZdhe0h98CMwK5DYPvh">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Opa! Já recebemos sua mensagem, e em muito breve responderemos.</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
