--- a/sitesesistemas.html
+++ b/sitesesistemas.html
@@ -44,11 +44,10 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="index.html#footer5-9">
-                         <img src="assets/images/favicon.desenvolvedorweb-150x120.png" alt="Like`Web - Desenvolvendo desde 2007" title="Like`Web - Desenvolvendo desde 2007" style="height: 3.8rem;">
+                         <img src="assets/images/logo.paulo-450x105.png" alt="Like`Web - Desenvolvendo desde 2007" title="Like`Web - Desenvolvendo desde 2007" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-success display-5" href="#top">
-                        PAULO R.FERNANDES</a></span>
+                
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -71,7 +70,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">free responsive site templates</a></section><section class="header3 cid-s1ehD9fOu4" id="header3-q">
+<section class="engine"><a href="https://mobirise.info/c">web builder</a></section><section class="header3 cid-s1ehD9fOu4" id="header3-q">
 
     
 
